# bosmapper

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  asset-manifest.json  biome.json  capacitor.config.json  compose.yml  index.html  ionic.config.json  jest-env.js  jest.config.js  package-lock.json  package.json  precache-manifest.053a49b2304e14a22a09334fb38646d1.js  precache-manifest.064429417594f16358d16b44d54296ba.js  precache-manifest.2a0a860d729cdca320c97a409e9ef86d.js  precache-manifest.3b153d641d16ba27b81e1a8841d25233.js  precache-manifest.43e9e5503930c21eb13d8b81c9dbed1e.js  precache-manifest.55e924b06a08b90d85497cff34eefb88.js  precache-manifest.6412e5bcf8912412c6e7c3382af60326.js  precache-manifest.9af8a9555a0f3e4de15e9b322fba5360.js  precache-manifest.a1abe584a1028b2c4c3abb35f5ec3429.js  precache-manifest.a8971bddd790f6192dd4fc5731fdea59.js  precache-manifest.ab45a900c5e8f136a5e8eeb91a6d2904.js  precache-manifest.c8032eb90dcae68e88601679bd720bf2.js  precache-manifest.cd5f63e2f3827bf201aa323639986416.js  precache-manifest.d41f0cc384426acb55d162753cd1b6df.js  precache-manifest.d760a1e4a2ffa2f983038c95af2c7c1d.js  precache-manifest.d84de0f9c512531e767a917121932e40.js  precache-manifest.ef6e459ee8bae45f062e6c2dac70dde1.js  precache-manifest.f01937ab821838086f7f6e7f78bbce4c.js  precache-manifest.f480accd275811f030571b3c9078f1c3.js  precache-manifest.fdc99f0ca2afe73aa23ee2d9d53c29ad.js  pyproject.toml  (+3 more)
.github/workflows/: build.yml  client.yml  server.yml  test.yml
app/: index.html  ionic.config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: manifest.json
app/src/: App.tsx  index.tsx  serviceWorker.ts  stores.tsx
bosmapper/: draw.py  main.py  models.py
bosmapper/data/: species.json  trees.geojson
bosmapper/scripts/: backup_server.py  extract_xlsx.py
bosmapper/src/: base.geojson  main.py
client/: capacitor.config.json  ionic.config.json  jest.config.js  package.json  tsconfig.json
client/src/: App.tsx  index.tsx  stores.tsx
client/tests/: App.test.tsx
map_data/: convert_abbr.py  extract_xlsx.py  paths.geojson  pyproject.toml  voedselbos_features_labeled.geojson  voedselbos_features_original.geojson  voedselbos_features_original_labeled.geojson  voedselbos_features_updated.geojson  voedselbos_species.json  voedselbos_species.xlsx
public/: index.html  manifest.json
scripts/: backup_server.py  extract_xlsx.py  list_unknown.py  pyproject.toml  voedselbos_species.xlsx
scripts/export/: draw.py
server/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
server/app/: draw.py  main.py  models.py
server/export/: draw.py
server/scripts/: backup_server.py  list_unknown.py
server/scripts/export/: draw.py
server/scripts/export/data/: trees.geojson
src/: App.test.tsx  App.tsx  index.tsx  serviceWorker.ts  setupTests.js  setupTests.jsx  stores.tsx  theme.css
src/assets/: vector_base.json  vector_features.json  voedselbos.json  voedselbos_features.json  voedselbos_features_updated.json  voedselbos_species.json
src/components/: AboutModal.tsx  AddButton.tsx  Canvas.tsx  Content.tsx  Credits.tsx  Crosshair.tsx  DataSummary.tsx  Filter.tsx  FilterModal.tsx  LicenseModal.tsx  LoadingScreen.tsx  LocationSelector.tsx  LoginPopover.tsx  Logo.tsx  MapCanvas.tsx  Menu.tsx  (+15 more)
tests/: App.test.tsx
thunder-tests/: thunderActivity.json
(+2094 files in other folders)
