[project]
name = "bosmapper"
version = "3.1.2"
description = "FastAPI server powering the bosmapper backend"

authors = [{ name = "Damien Allen", email = "dev@dallen.co" }]
license = "AGPL-3.0"
readme = "README.md"

requires-python = ">=3.14,<3.15"

dependencies = [
    "Babel==2.17.0",
    "fastapi==0.128.0",
    "Jinja2==3.1.6",
    "mongoengine==0.29.1",
    "numpy==2.4.1",
    "python-multipart==0.0.22",
    "pycairo==1.29",
    "pyproj==3.7.2",
    "uvicorn==0.40",
]

[dependency-groups]
dev = ["openpyxl~=3.1", "requests~=2.32"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"
