[tool.poetry]
name = "bosmapper-server"
version = "3.0.0"
description = "FastAPI & Mongo powering the bosmapper backend"
authors = ["Damien Allen <dev@dallen.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

aiofiles = "^0.8"
Babel = "^2.10"
fastapi = "^0.68"
Jinja2 = "^3.1"
mongoengine = "^0.24"
numpy = "^1.22"
python-multipart = "^0.0.5"
pycairo = "^1.21"
pyproj = "^3.3"
uvicorn = "^0.15"


[tool.poetry.dev-dependencies]
flake8 = "^4.0"
flake8-black = "^0.2"
black = "^22.3"
isort = "^5.10"

# Scripts
openpyxl = "^3.0"
requests = "^2.27"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
default_section = "THIRDPARTY"
line_length = 79
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
